# eikodan

./: .gitignore  CLAUDE.md  LICENSE  README.md  bash-setup.md  container-ops.md  directory-layout.md  lastshot-3stack-heavy-screen.md  rust-vs-node-db-bench.md
.github/workflows/: lastshot-ci.yml
connectweb/: CLAUDE.md  Cargo.toml  README.md  bacon.toml
connectweb/.cargo/: config.toml
connectweb/crates/app/: Cargo.toml
connectweb/crates/app/src/: main.rs
connectweb/crates/app/templates/: base.html
connectweb/crates/feature-user/: Cargo.toml
connectweb/crates/feature-user/src/: lib.rs
connectweb/crates/feature-user/templates/user/: activities.html  page.html
connectweb/crates/rpc/: Cargo.toml
connectweb/crates/rpc/src/: lib.rs
connectweb/crates/schema/: Cargo.toml  build.rs
connectweb/crates/schema/proto/: user.proto
connectweb/crates/schema/src/: lib.rs
connectweb/crates/webcore/: Cargo.toml
connectweb/crates/webcore/src/: lib.rs
connectweb/tests-http/tests/: smoke.rs
fastweb/: .gitignore  BENCHMARK.md  CLAUDE.md  Cargo.toml  HOTRELOAD.md  README.md  rust-toolchain.toml
fastweb/.cargo/: config.toml
fastweb/assets/: check-css.sh  input.css  setup-css.sh
fastweb/assets/hooks/: pre-push
fastweb/assets/semgrep/: tailwind-purge.yml
fastweb/crates/app/: Cargo.toml
fastweb/crates/app/src/: main.rs
fastweb/crates/app/templates/: base.html
fastweb/crates/feature-hello/: Cargo.toml
fastweb/crates/feature-hello/src/: lib.rs
fastweb/crates/feature-hello/templates/hello/: clicked.html  index.html
fastweb/crates/rpc/: Cargo.toml  build.rs
fastweb/crates/rpc/proto/: greet.proto
fastweb/crates/rpc/src/: lib.rs
fastweb/crates/webcore/: Cargo.toml
fastweb/crates/webcore/src/: lib.rs
fastweb/tests-http/: Cargo.toml
fastweb/tests-http/tests/: smoke.rs
lastshot/: .dockerignore  CI-PERF.md  CLAUDE.md  COLD-START.md  Cargo.toml  Dockerfile  FAST-RUST.md  NAMING.md  README.md  bacon.toml  compose.yml  flyway.toml  run  rustfmt.toml
lastshot-bench/: README.md  run
lastshot-laravel/: .env.example  .gitignore  README.md  run
lastshot-laravel/app/Http/Controllers/: CounterController.php  ReportController.php
lastshot-laravel/bootstrap/: app.php
lastshot-laravel/deploy/: preload.php
lastshot-laravel/resources/views/: counter.blade.php  report.blade.php
lastshot-laravel/routes/: web.php
lastshot-next/: .gitignore  README.md  cluster-start.cjs  ecosystem.config.cjs  next.config.mjs  package-lock.json  package.json  run
lastshot-next/app/: counter.tsx  globals.css  layout.tsx  page.tsx
lastshot-next/app/api/increment/: route.ts
lastshot-next/app/report/: page.tsx
lastshot-next/lib/: db.ts
lastshot-node/: .gitignore  README.md  package-lock.json  package.json  server.mjs
lastshot-node/bench/: .gitignore  REPORT-pipe.md  REPORT-pool64.md  REPORT.md  bench.sh  cpusample.sh  summary.mjs
lastshot/.cargo/: config.toml
lastshot/assets/: check-css.sh  input.css  setup-css.sh  strip-nightly.sh
lastshot/assets/semgrep/: tailwind-purge.yml
lastshot/browser/: README.md  package-lock.json  package.json  playwright.config.ts
lastshot/browser/tests/: counter.spec.ts
lastshot/crates/app/: Cargo.toml
lastshot/crates/app/src/: main.rs
lastshot/crates/app/static/: .gitkeep
lastshot/crates/app/templates/: base.html
lastshot/crates/db/: Cargo.toml
lastshot/crates/db/src/: lib.rs
lastshot/crates/feature-bench/: Cargo.toml
lastshot/crates/feature-bench/src/: lib.rs
lastshot/crates/feature-counter/: Cargo.toml
lastshot/crates/feature-counter/src/: lib.rs
lastshot/crates/feature-counter/templates/counter/: count.html  page.html
lastshot/crates/feature-report/: Cargo.toml
lastshot/crates/feature-report/src/: lib.rs
lastshot/crates/feature-report/templates/report/: page.html
lastshot/crates/rpc/: Cargo.toml
lastshot/crates/rpc/src/: lib.rs
lastshot/crates/schema/: build.rs
lastshot/crates/schema/proto/: buf.yaml  counter.proto  report.proto
lastshot/crates/schema/src/: lib.rs
lastshot/crates/webcore/: Cargo.toml
lastshot/crates/webcore/src/: lib.rs
lastshot/lint/: .gitignore  .oxfmtrc.json  .sqlfluff  README.md  check.sh  fmt.sh  setup.sh
lastshot/migrations/: V20260614153000__init_counter.sql  V20260614153500__seed_counter.sql  V20260614220000__bench_rows.sql  schema.sql  seed.sql
lastshot/tests-http/tests/: smoke.rs
lint-format/: .gitignore  .oxfmtrc.json  .sqlfluff  README.md  check-lint.sh  rustfmt.toml  setup-lint.sh
lint-format/samples/: config.toml  config.yml  doc.md  page.html  query.sql  script.sh  style.css
lint-format/samples/proto/: buf.yaml  greet.proto
lint-format/samples/rust/: Cargo.toml  rust-toolchain.toml
lint-format/samples/rust/src/: main.rs
pg-bench/: POSTGRES_BENCHMARK.md  README.md  bench.mjs  docker_setup.sh  durability_bench.sh  package-lock.json  package.json  summary.mjs
playwright-sample/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
playwright-sample/bench/: .gitignore  README.md  ab-bench.mjs  analyze.mjs  mcp-bench.mjs
playwright-sample/scripts/: drive-subsecond.mjs
playwright-sample/tests/: example.spec.ts
rust-htmx/: .gitignore  CLAUDE.md  Cargo.toml  readme.md
rust-htmx/.cargo/: config.toml
rust-htmx/docs/: chat-notes-htmx-vs-spa.md
rust-htmx/src/: controller.rs  main.rs  model.rs  service.rs  usecase.rs
rust-htmx/templates/: base.html  index.html
rust-htmx/templates/partials/: todo_edit_row.html  todo_row.html
subsecond-demo/: Cargo.toml  README.md
subsecond-demo/src/: main.rs
task-runners/: README.md  demo.sh  example.md
task-runners/bash/: run
task-runners/cargo-make/: Makefile.toml
task-runners/just/: Justfile
task-runners/mage/: go.mod  magefile.go
task-runners/make/: Makefile
task-runners/mask/: maskfile.md
task-runners/mise/: mise.toml
task-runners/task/: Taskfile.yml
task-runners/xc/: README.md
