# codegen-backend をプロファイルで指定するための nightly opt-in。
cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/app", "crates/webcore", "crates/feature-hello", "crates/rpc"]

# 依存はここで一元管理する。featureクレートはここを編集しないこと
# （ワークスペース共通Cargo.tomlの変更は全クレート再ビルドを誘発するため）。
[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
minijinja = "2"
minijinja-autoreload = "2"
tower-livereload = "0.9"
notify = "8"
listenfd = "1"

# ───────────────────────────────────────────────────────────
# devプロファイル: 反復速度に全振り（動作速度は release が opt-3 で担保。本番デプロイで LTO を盛りたければ lastshot 側 release-max プロファイル参照）
#   自分のコード  = opt-level 0（毎回再コンパイル＝最速）
#   依存クレート  = opt-level 0（フルビルドのコストを最小化）
# 以前は依存だけ opt-level 3 で焼いていたが、cargo clean / 新規checkout / depsが変わるブランチ
# 切替のたびにコストを払う一方、dev 動作の便益は手元の操作頻度では体感ゼロ・負荷試験は release
# でやるので不要 = 撤回した。実測根拠: BENCHMARK.md ⑤
# ───────────────────────────────────────────────────────────
[profile.dev]
opt-level = 0
debug = false            # debuginfo生成を省いてコンパイル・リンクを短縮
                         # （panicのfile:lineが欲しければ "line-tables-only" に）
codegen-backend = "cranelift"  # 自前は Cranelift（保険。dev=opt0 では LLVM が fast path なので差は誤差）

[profile.dev.package."*"]
opt-level = 0
codegen-backend = "cranelift"  # 依存も Cranelift で統一（実測根拠: BENCHMARK.md ⑤「依存も cranelift にできるか」）
