# codegen-backend をプロファイルで指定するための nightly opt-in。
cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [
  "crates/app",
  "crates/webcore",
  "crates/schema",
  "crates/db",
  "crates/feature-counter",
  "crates/rpc",
]

# 依存はここで一元管理する。featureクレートはここを編集しないこと
# （ワークスペース共通Cargo.tomlの変更は全クレート再ビルドを誘発するため）。
# connectrpc/buffa は schema/rpc クレートにだけ、sqlx は db/webcore/feature にだけ要るので、
# ここではなく各クレート側に置く。
[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
minijinja = "2"
minijinja-autoreload = "2"
tower-livereload = "0.9"
notify = "8"
listenfd = "1"
# webcore が render_view（生成型 → minijinja + 埋め込みJSON）で使う。安定なので共有してよい。
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ───────────────────────────────────────────────────────────
# devプロファイル: 反復速度に全振り（動作速度は release が opt-3+LTO で担保する）
#   自分のコード  = opt-level 0（毎回再コンパイル＝最速）
#   依存クレート  = opt-level 0（フルビルドのコストを最小化）
# 以前は依存だけ opt-level 3 で焼いていたが、cargo clean / 新規checkout / depsが変わるブランチ
# 切替のたびに +約11s/-45% のコストを払う一方、dev 動作の便益(+17% throughput)は手元の操作
# 頻度では体感ゼロ・負荷試験は release でやるので不要 = 撤回した。
# 実測: ../fastweb/BENCHMARK.md ⑤
# ───────────────────────────────────────────────────────────
[profile.dev]
opt-level = 0
debug = false # debuginfo生成を省いてコンパイル・リンクを短縮
# （panicのfile:lineが欲しければ "line-tables-only" に）
codegen-backend = "cranelift" # 自分のコードは Cranelift で高速コード生成

[profile.dev.package."*"]
opt-level = 0
codegen-backend = "llvm" # 依存は LLVM（cranelift 切替は別途検証）
