[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
minijinja-autoreload = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.dev]
# debug = "true"
debug = "line-tables-only"  # panic backtrace に file:line を残しつつコンパイル短縮
