[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
minijinja-autoreload = "2"
tower-livereload = "0.9"
notify = "8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.dev]
## 速度を追求したオプション
debug = false       # skip debuginfo generation for faster compile
strip = "debuginfo" # remove any debuginfo dependencies emi

# フルデバッグ
# debug = true

## 速度とバランスのデバッグ
# debug = "line-tables-only"  # panic backtrace に file:line を残しつつコンパイル短縮
