[package]
name = "app"
version = "0.1.0"
edition = "2021"

# binは薄い層: ルーター組み立て・起動・開発用ライブリロードだけ。
# 各featureを path 依存で束ね、routes() を merge する。
[dependencies]
webcore = { path = "../webcore" }
feature-hello = { path = "../feature-hello" }
rpc = { path = "../rpc" }
axum = { workspace = true }
tokio = { workspace = true }
tower-livereload = { workspace = true }
notify = { workspace = true }
listenfd = { workspace = true }
