[package]
name = "webcore"
version = "0.1.0"
edition = "2021"

# 共有コア。各featureが依存する「本当に安定したものだけ」を置く。
# ここに開発中の型を足すと全featureの再ビルドを誘発するので注意。
[dependencies]
axum = { workspace = true }
minijinja = { workspace = true }
minijinja-autoreload = { workspace = true }
# render_view が生成型を minijinja(Value) と埋め込みJSON の両方へ流すのに使う。
serde = { workspace = true }
serde_json = { workspace = true }
# AppState が共有する Postgres プールの型(PgPool)を持つため。
db = { path = "../db" }
